fix single-image-preview css responsive overflow X

--- a/src/components/WindowConversation/AsyncMsg/AsyncMsg.css
+++ b/src/components/WindowConversation/AsyncMsg/AsyncMsg.css
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   row-gap: 0.25rem;
   gap: 0.25rem;
+  width: auto;
 }
 .msg-file-container .file-preview-item {
   box-sizing: unset;
